[gd_scene load_steps=19 format=3 uid="uid://ckno7ot5qtjc5"]

[ext_resource type="Texture2D" uid="uid://dhvu6k317ddau" path="res://Sprits/DesenhosDoJogoEngeirosTemporais/personages/Trela_vita_b-Sheet.png" id="1_a21tm"]
[ext_resource type="Script" path="res://Scrips/chfes/chef_2.gd" id="1_k10wc"]
[ext_resource type="Texture2D" uid="uid://fn2rhk14uu3v" path="res://Sprits/DesenhosDoJogoEngeirosTemporais/personages/Trela_vita_-Sheet_b.png" id="2_w8px6"]
[ext_resource type="Texture2D" uid="uid://s2nn8fwkg22k" path="res://Sprits/Metal Buttons Icons.png" id="4_fmwf0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2bjs"]
atlas = ExtResource("1_a21tm")
region = Rect2(0, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4pmj"]
atlas = ExtResource("1_a21tm")
region = Rect2(32, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4x4l"]
atlas = ExtResource("1_a21tm")
region = Rect2(64, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwke5"]
atlas = ExtResource("1_a21tm")
region = Rect2(96, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qagtt"]
atlas = ExtResource("2_w8px6")
region = Rect2(0, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrfti"]
atlas = ExtResource("2_w8px6")
region = Rect2(32, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhwcy"]
atlas = ExtResource("2_w8px6")
region = Rect2(64, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qou2y"]
atlas = ExtResource("2_w8px6")
region = Rect2(96, 0, 32, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_86jbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2bjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4pmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4x4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwke5")
}],
"loop": true,
"name": &"interagindo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qagtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrfti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhwcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qou2y")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cn5i7"]
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dtfbl"]
radius = 52.811

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elf0i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wp6sk"]
atlas = ExtResource("4_fmwf0")
region = Rect2(352, 288, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rbgcq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp6sk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="chef2" type="CharacterBody2D"]
script = ExtResource("1_k10wc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_86jbv")
animation = &"normal"
autoplay = "normal"
frame_progress = 0.959596
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cn5i7")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dtfbl")
debug_color = Color(0.996517, 0, 0.185162, 0.42)

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(-20, -41)
shape = SubResource("RectangleShape2D_elf0i")
action = "INTERAGIR"
visibility_mode = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TouchScreenButton"]
scale = Vector2(0.5625, 0.53125)
sprite_frames = SubResource("SpriteFrames_rbgcq")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
